--- a/app/styles/components/_top-bar.scss
+++ b/app/styles/components/_top-bar.scss
@@ -4,12 +4,17 @@
 * @Email:  me@andreeray.se
 * @Filename: _top-bar.css
 // @Last modified by:   andreeray
-// @Last modified time: 2017-02-25T23:19:52+01:00
+// @Last modified time: 2017-02-26T03:21:56+01:00
 */
+
+
+
 .top-bar, .top-bar ul  {
     background: $topbar-background;
 }
-.top-bar {
+
+.top-bar
+{
     .menu-text {
         color: #fff;
         font-weight: 300;
@@ -17,5 +22,8 @@
     .menu > .menu-text > a{
         display: inline;
         padding: 0;
+    }
+    .active-link {
+        font-weight: bold;
     }
 }
