created clock component

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -3,7 +3,7 @@
 // @Email:  me@andreeray.se
 // @Filename: _variables.scss
 // @Last modified by:   andreeray
-// @Last modified time: 2017-02-22T22:21:52+01:00
+// @Last modified time: 2017-02-26T04:13:48+01:00
 
 
 // colors
@@ -15,3 +15,8 @@ $topbar-background: $black;
 // text
 $letter-spacing: 3px;
 $font-size: 13px;
+
+// clock
+$clock-text-color: white;
+$clock-bg-color: #b5d0e2;
+$clock-border-color: #2099e8;
