--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,11 +2,12 @@
 // @Date:   2017-02-20T13:54:23+01:00
 // @Email:  me@andreeray.se
 // @Filename: app.scss
-// @Last modified by:   Andreee "DevelDoe" Ray
-// @Last modified time: 2017-02-22T21:06:45+01:00
+// @Last modified by:   andreeray
+// @Last modified time: 2017-02-26T04:16:46+01:00
 
 @import 'base/variables';
 @import 'components/top-bar';
+@import 'components/clock';
 
 body{
     font-weight: 300;
