--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,11 +3,12 @@
 // @Email:  me@andreeray.se
 // @Filename: app.scss
 // @Last modified by:   andreeray
-// @Last modified time: 2017-02-26T04:16:46+01:00
+// @Last modified time: 2017-02-26T21:38:30+01:00
 
 @import 'base/variables';
 @import 'components/top-bar';
 @import 'components/clock';
+@import 'components/controls';
 
 body{
     font-weight: 300;
